WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56658
REGRESSION (float-based line boxes): Gaps and overlaps in selection highlight
https://bugs.webkit.org/show_bug.cgi?id=56658
Summary
REGRESSION (float-based line boxes): Gaps and overlaps in selection highlight
mitz
Reported
2011-03-18 10:41:55 PDT
Created
attachment 86179
[details]
Test case When using a font with non-integer advances, there are sometimes gaps in the selection highlight between line boxes or between line box and gap rects. You can see this by highlighting text in the attached test case. I’ve also seen overlapping highlights and sometimes leftover highlight bits when clearing the selection.
Attachments
Test case
(680 bytes, text/html)
2011-03-18 10:41 PDT
,
mitz
no flags
Details
Account for non-integral anchor point coordinates
(27.68 KB, patch)
2011-04-30 21:27 PDT
,
mitz
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-03-18 10:42:17 PDT
<
rdar://problem/9155067
>
mitz
Comment 2
2011-04-30 21:27:53 PDT
Created
attachment 91812
[details]
Account for non-integral anchor point coordinates
mitz
Comment 3
2011-05-01 02:21:10 PDT
Fixed in
r85411
<
http://trac.webkit.org/changeset/85411
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug