<rdar://problem/9155067> REGRESSION (float-based line boxes): Gaps and overlaps in selection highlight https://bugs.webkit.org/show_bug.cgi?id=56658

Reviewed by Anders Carlsson.

Source/WebCore:

Test: fast/text/selection-rect-rounding.html

* platform/graphics/FontFastPath.cpp:
(WebCore::Font::selectionRectForSimpleText): Account for non-integral anchor point coordinates.
* platform/graphics/mac/FontComplexTextMac.cpp:
(WebCore::Font::selectionRectForComplexText): Ditto.
* rendering/InlineTextBox.cpp:
(WebCore::InlineTextBox::selectionRect): Floor the horizontal sides of the clip rect.
(WebCore::InlineTextBox::paintSelection): Pass the logical left location to Font::selectionRectForText(),
since it affects rounding.

LayoutTests:

* fast/text/selection-rect-rounding.html: Added.
* platform/mac/fast/text/selection-rect-rounding-expected.png: Added.
* platform/mac/fast/text/selection-rect-rounding-expected.txt: Added.



Canonical link: https://commits.webkit.org/75116@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85411 268f45cc-cd09-0410-ab3c-d52691b4dbfc